welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:1: error: Missing closing brace `}' assumed here
for (variable1 <- 1 to 7){
^Runner:2: error: '<-' expected but integer literal found.
  for (variable2 1 to 4){
                 ^Runner:24: error: illegal start of simple expression
	}
        ^